# PEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build  conanfile.txt  fs.cfg  main.cpp
CMake/: CMakeLists.txt  git_boost_build.cmake  git_submodule_build.cmake  git_submodule_tool.cmake  git_submodule_update.cmake
gamedata/configs/: basic_shaders.cfg  debug_tools.cfg  main.cfg
gamedata/shaders/: debug.glsl  passthrough_screen_quad_fs.glsl  passthrough_screen_quad_vs.glsl  postprocess.glsl  shadow_path.glsl
gamedata/shaders/mesh/: mesh_solid_basic_vs.glsl  mesh_solid_fs.glsl  mesh_solid_instanced_vs.glsl  mesh_solid_skeleton_vs.glsl  mesh_textured_basic_vs.glsl  mesh_textured_fs.glsl  mesh_textured_instanced_vs.glsl  mesh_textured_skeleton_vs.glsl
gamedata/shaders/mesh/deferred/: csm_fs.glsl  textured_gfs.glsl  textured_gvs.glsl  textured_instanced_gvs.glsl  textured_skeleton_gvs.glsl  textured_skeleton_instanced_gvs.glsl  vs.glsl
gamedata/shaders/mesh/forward/: csm_gvs.glsl  csm_instanced_gvs.glsl  csm_skeleton_gvs.glsl  csm_textured_fs.glsl  csm_textured_instanced_vs.glsl  csm_textured_skeleton_vs.glsl  csm_textured_vs.glsl  spot_light_skeleton_gs.glsl  spot_light_skeleton_vs.glsl
gamedata/shaders/postprocess/: gamma_fs.glsl  hdr_fs.glsl  vhs_fs.glsl
gamedata/shaders/render_tech/: skeleton_solid.glsl  skeleton_textured.glsl  solid.glsl  textured.glsl
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  algo.cpp  fast_inverse_square_root.cpp  grx_frustum_culling_bench.cpp
src/core/: aligned_allocator.hpp  args_view.hpp  assert.hpp  async.hpp  avg_counter.hpp  base64.hpp  bits.hpp  config_manager.hpp  container_extensions.hpp  failure_opt.hpp  fiber_pool.hpp  files.hpp  flags.hpp  fps_counter.hpp  global_storage.hpp  helper_macros.hpp  keyboard_fuzzy_search.hpp  log.hpp  macro_argname.hpp  main.cpp  match_syntax.hpp  math.hpp  md5.hpp  option_array.hpp  pe_throw.hpp  platform_dependent.hpp  print.hpp  range.hpp  range_op.hpp  resource_mgr_base.hpp  scope_guard.hpp  serialization.hpp  slice_range_view.hpp  ston.hpp  string_hash.hpp  time.hpp  try_opt.hpp  types.hpp  vec.hpp
src/core/acts/: drop.hpp  drop_pref.hpp  to.hpp  trim.hpp  unbracket.hpp
src/core/data_structures/: MemStack.hpp  mem_vector.hpp
src/core/views/: drop.hpp  skip.hpp  split.hpp  sub.hpp
src/graphics/: .clang-tidy  CMakeLists.txt  grx_animation.cpp  grx_animation.hpp  grx_animation_player.hpp  grx_bone_data.hpp  grx_camera.cpp  grx_camera.hpp  grx_camera_manipulator.cpp  grx_camera_manipulator.hpp  grx_camera_manipulator_fly.cpp  grx_camera_manipulator_fly.hpp  grx_cascaded_shadow_mapping_tech.cpp  grx_cascaded_shadow_mapping_tech.hpp  grx_color_map.cpp  grx_color_map.hpp  grx_config_ext.hpp  grx_context.cpp  grx_context.hpp  grx_cpu_mesh_group.cpp  grx_cpu_mesh_group.hpp  grx_debug.hpp  grx_deferred_renderer_light.cpp  grx_deferred_renderer_light.hpp  grx_forward_renderer_light.cpp  grx_forward_renderer_light.hpp  grx_g_buffer.cpp  grx_g_buffer.hpp  grx_gl_trace.hpp  grx_joint_animation.hpp  grx_mesh.hpp  grx_mesh_gen.cpp  grx_mesh_gen.hpp  grx_mesh_instance.hpp  grx_mesh_mgr.cpp  grx_mesh_mgr.hpp  grx_movable.hpp  grx_object.hpp  grx_object_mgr.hpp  grx_postprocess.hpp  (+33 more)
src/graphics/algorithms/: grx_frustum_culling.cpp  grx_frustum_culling.hpp  grx_frustum_culling_asm.hpp
src/graphics/algorithms/asm/: x86_64_avx_frustum_culling.asm  x86_64_sse_frustum_culling.asm
src/input/: CMakeLists.txt  inp_event_receiver.hpp  inp_input_ctx.cpp  inp_input_ctx.hpp  inp_linux.cpp  inp_linux.hpp  inp_unix_mouse.cpp  inp_unix_mouse.hpp
src/processing/: terrain_generation.hpp
src/samples/: CMakeLists.txt  genshit.cpp  genshit_gpu.cpp  glock.cpp  glock_hud_test.cpp  input_test.cpp  textured_quad.cpp  vbo_sample.cpp
src/tests/: .clang-tidy  CMakeLists.txt  async.cpp  base64.cpp  compression.cpp  config_manager.cpp  container_extensions.cpp  failure_opt.cpp  grx_animation.cpp  grx_cpu_mesh_group.cpp  grx_skeleton.cpp  log.cpp  match_syntax.cpp  md5.cpp  print.cpp  ranges.cpp  serialization.cpp  try_opt.cpp  vec.cpp
src/tests/fuzzing/: CMakeLists.txt  add_afl_fuzz_test.cmake  afl.cpp  config.cpp  dummy.cpp
src/tools/: CMakeLists.txt  lang_tool.cpp  macro_gen.cpp  merge_dae_anim.cpp
src/ui/: CMakeLists.txt  nuklear.cpp  nuklear.hpp  nuklear_binding.hpp  nuklear_glfw_gl3.h
src/util/: CMakeLists.txt  compression.cpp  compression.hpp  vtf_format.hpp
test_gamedata/configs/: main.cfg
